# aisl-click

./: .env.template  .gitignore  README.md
.github/workflows/: deploy.yml
infra/: app.yaml  edge.yaml  github-deploy.yaml
redirector/: Cargo.toml
redirector/.cargo/: config.toml
redirector/src/: main.rs
scripts/: build.sh  delegate-ns.sh  deploy-edge.sh  deploy.sh  poll-ns.sh  test.sh
